Fix missing margins under code blocks in the wiki

--- a/assets/css/wiki.scss
+++ b/assets/css/wiki.scss
@@ -188,7 +188,7 @@ main.article {
             font-size: 1.125em;
         }
 
-        p, ul, ol, dl, table, image, figure, blockquote {
+        p, ul, ol, dl, table, pre, image, figure, blockquote {
             margin-bottom: 20px;
         }
 
